--- a/homework_starter_code/08_Routes_Cont_Views/game_center/app/views/home/index.html.erb
+++ b/homework_starter_code/08_Routes_Cont_Views/game_center/app/views/home/index.html.erb
@@ -7,4 +7,8 @@
 		<td><%= link_to image_tag("games/rock-paper-scissors.jpg"), throw_path %></td><br>
 		<td><%= link_to image_tag("games/dice.jpg"), toss_path %></td><br>
 	</tr>
+	<tr>
+		<td><%= link_to image_tag("coin/heads_or_tails.jpg"), coin_path %></td>
+		<td><%= link_to image_tag("games/cards.jpg"), card_path %></td>
+	</tr>
 </table>
