Added recently added page

--- a/FormSearch/app/views/forms/index.html.erb
+++ b/FormSearch/app/views/forms/index.html.erb
@@ -5,13 +5,18 @@
 
 <h1>Listing Forms</h1>
 
+<ul>
+  </li>
+</ul>
+
+
 <table>
   <thead>
     <tr>
-      <th>Form name</th>
-      <th>Municipality name</th>
-      <th>Municipality state</th>
-      <th>Form department</th>
+      <th>Form Name</th>
+      <th>Municipality</th>
+      <th>State</th>
+      <th>Department</th>
       <th colspan="3"></th>
     </tr>
   </thead>
