--- a/FormSearch/app/views/layouts/application.html.erb
+++ b/FormSearch/app/views/layouts/application.html.erb
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<header>
+<p><%= link_to 'HOME', root_path %></p>
+</header>
+
 <head>
   <title>FormSearch</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
