Added municipalities model and controller. Drop down select in create with name and state.

--- a/FormSearch/app/views/forms/index.html.erb
+++ b/FormSearch/app/views/forms/index.html.erb
@@ -21,6 +21,7 @@
     </tr>
   </thead>
 
+ 
   <tbody>
     <% @forms.each do |form| %>
       <tr>
@@ -28,14 +29,18 @@
         <td><%= form.municipality_name %></td>
         <td><%= form.municipality_state %></td>
         <td><%= form.form_department %></td>
+        <% if user_signed_in? %>
+        <td><%= link_to "upvote", like_form_path(form), method: :put %>
         <td><%= link_to 'Show', form %></td>
         <td><%= link_to 'Edit', edit_form_path(form) %></td>
         <td><%= link_to 'Destroy', form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
+<% if user_signed_in? %>
 <%= link_to 'New Form', new_form_path %>
+<% end %>
