--- a/FormSearch/app/views/forms/welcome.html.erb
+++ b/FormSearch/app/views/forms/welcome.html.erb
@@ -4,12 +4,15 @@
 
 <ul>
   <li><%= link_to 'All Forms', forms_path %></li>
+  <li><%= link_to 'All Municipalities', municipalities_path %></li>
+ 
   <li><%= link_to 'Recently added', recent_path %>
-  <li><%= link_to 'By Department', list_path %></li>
+  <li><%= link_to 'By Department', department_path %></li>
   <li>By State</li>
 
 <br>
+<% if user_signed_in? %>
+	<h3>I want to:</h3>
 
-<h3>I want to:</h3>
-
-<%= link_to 'Add a New Form', new_form_path %>
+	<%= link_to 'Add a New Form', new_form_path %>
+<% end %>
