--- a/FormSearch/app/views/forms/show.html.erb
+++ b/FormSearch/app/views/forms/show.html.erb
@@ -12,12 +12,12 @@
 
 <p>
   <strong>Municipality name:</strong>
-  <%= @form.municipality_name %>
+  <%= @form.municipality.name %>
 </p>
 
 <p>
   <strong>Municipality state:</strong>
-  <%= @form.municipality_state %>
+  <%= @form.municipality.state %>
 </p>
 
 <p>
