--- a/FormSearch/app/views/forms/index.html.erb
+++ b/FormSearch/app/views/forms/index.html.erb
@@ -26,11 +26,11 @@
     <% @forms.each do |form| %>
       <tr>
         <td><%= link_to form.form_name, form.form_link %></td>
-        <td><%= form.municipality_name %></td>
-        <td><%= form.municipality_state %></td>
+        <td><%= form.municipality.name %></td>
+        <td><%= form.municipality.state %></td>
         <td><%= form.form_department %></td>
         <% if user_signed_in? %>
-        <td><%= link_to "upvote", like_form_path(form), method: :put %>
+        <td><%#= link_to "upvote", like_form_path(form), method: :put %>
         <td><%= link_to 'Show', form %></td>
         <td><%= link_to 'Edit', edit_form_path(form) %></td>
         <td><%= link_to 'Destroy', form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
