--- a/FormSearch/app/views/forms/recent.html.erb
+++ b/FormSearch/app/views/forms/recent.html.erb
@@ -15,8 +15,8 @@
   	<tr>
 	<% @forms.each do |form| %>
 	<td><%= link_to form.form_name, form.form_link %></td>
-        <td><%= form.municipality_name %></td>
-        <td><%= form.municipality_state %></td>
+        <td><%= form.municipality.name %></td>
+        <td><%= form.municipality.state %></td>
         <td><%= form.form_department %></td>
       </tr>
     <% end %>
