--- a/FormSearch/app/views/forms/index.html.erb
+++ b/FormSearch/app/views/forms/index.html.erb
@@ -3,14 +3,33 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Forms</h1>
-
-<ul>
-  </li>
-</ul>
 
 
-<table>
+
+<!-- <div class="row">
+  <div class="col-lg-6">
+    <div class="input-group"> -->
+    
+      <%= form_for 'forms_path', method: :get, :class => "col-lg-6 form-inline" do %>
+       <!--  <div class="col-lg-6"> -->
+        
+        <%= text_field_tag :query, params[:query], :class => "input-medium search-query" %>
+        
+          <!-- <span class="input-group-btn"> -->
+        
+            <%= submit_tag "Search", :form_name => nil, :class => "btn btn-default" %>
+       
+          <!-- </span> -->
+        
+      <% end %>
+
+<!--   </div> -->
+<!-- </div> -->
+
+<div class="panel-heading">All Forms</div>
+
+<table class="table table-hover">
+ 
   <thead>
     <tr>
       <th>Form Name</th>
@@ -20,7 +39,7 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
+  </div>
  
   <tbody>
     <% @forms.each do |form| %>
