--- a/FormSearch/app/views/forms/welcome.html.erb
+++ b/FormSearch/app/views/forms/welcome.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Welcome! What type of forms are your looking for?</h1>
 
-<ul>
+<ul class="nav nav-pills nav-stacked" >
   <li><%= link_to 'All Forms', forms_path %></li>
   <li><%= link_to 'All Municipalities', municipalities_path %></li>
  
@@ -14,5 +14,7 @@
 <% if user_signed_in? %>
 	<h3>I want to:</h3>
 
-	<%= link_to 'Add a New Form', new_form_path %>
+	<li><%= link_to 'Add a New Form', new_form_path %></li>
+
 <% end %>
+</ul>
