--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="/assets/bootstrap.min.css" rel="stylesheet">
+
+   <!--  <link href="css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 <header>
 <ul class="nav nav-pills">
