--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -30,7 +30,7 @@
 
 <p>
   <strong>Form department:</strong>
-  <%= @form.form_department %>
+  <%= @form.department.department %>
 </p>
 </div>
 <%= link_to 'Edit', edit_form_path(@form) %> |
