Added search by department

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -13,15 +13,18 @@
   <tbody>
     <% @departments.each do |department| %>
       <tr>
-        <td><%= department.department %></td>
+        <td><%= link_to department.department, department_path(department) %></td>
+        <% if user_signed_in? %>
         <td><%= link_to 'Show', department %></td>
         <td><%= link_to 'Edit', edit_department_path(department) %></td>
         <td><%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
+<% if user_signed_in? %>
 <%= link_to 'New Department', new_department_path %>
+<% end %>
