--- a/app/views/forms/_recent.html.erb
+++ b/app/views/forms/_recent.html.erb
@@ -1,6 +1,6 @@
 <!-- <div class="panel panel-default"> -->
 
-<h1 class="panel-heading">Recently added forms.</h1>
+<h1 class="panel-heading">Recently added forms:</h1>
 
 <table class="table table-hover">
  
