--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,9 +1,42 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Department:</strong>
-  <%= @department.department %>
-</p>
+
+<h1 class="panel-heading">Department: <%= @department.department %></h1>
+
+<table class="table table-hover">
+<div>
+<thead>
+    <tr>
+      <th>Form Name</th>
+      <th>Municipality</th>
+      <th>State</th>
+    
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+ 
+  <tbody>
+    <% @department.forms.each do |form| %>
+      <tr>
+        <td><%= link_to form.form_name, form.form_link %></td>
+        <td><%= form.municipality.name %></td>
+        <td><%= form.municipality.state %></td>
+  
+        <% if user_signed_in? %>
+        <td><%#= link_to "upvote", like_form_path(form), method: :put %>
+        <td><%= link_to 'Show', form %></td>
+        <td><%= link_to 'Edit', edit_form_path(form) %></td>
+        <td><%= link_to 'Destroy', form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 
 <%= link_to 'Edit', edit_department_path(@department) %> |
 <%= link_to 'Back', departments_path %>
+
+
+</div>
