--- a/app/views/forms/welcome.html.erb
+++ b/app/views/forms/welcome.html.erb
@@ -4,7 +4,8 @@
 
 <ul class="nav nav-pills nav-stacked" >
   <li><%= link_to 'All Forms', forms_path %></li>
-  <li><%= link_to 'All Municipalities', municipalities_path %></li>
+  <li><%= link_to 'By Municipality', municipalities_path %></li>
+  <li><%= link_to 'By Department', departments_path %></li>
  
   <li><%#= link_to 'Recently added', recent_path %>
   <li><%#= link_to 'By Department', department_path %></li>
