--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -23,7 +23,7 @@
     <%= f.collection_select(:municipality_id, Municipality.all, :id, :name) %><br>
   </div>
   <div class="field">
-    <%= f.label :form_department %><br>
+    <%= f.label :department_id %><br>
     <%= f.collection_select :department_id, Department.order(:department), :id, :department %>
   </div>
   <div class="actions">
