Added population to municipalities

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,14 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Departments</h1>
-
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Department</th>
       <th colspan="3"></th>
     </tr>
   </thead>
+  </div>
+
 
   <tbody>
     <% @departments.each do |department| %>
