--- a/app/views/municipalities/show.html.erb
+++ b/app/views/municipalities/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <h1><%= @municipality.name %></h1>
+<h4>State:<%= @municipality.state.state %></h4>
 <h4>Population:<%= @municipality.population %></h4>
 <br>
 <div>
