--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -46,7 +46,7 @@
       <tr>
         <td><%= link_to form.form_name, form.form_link %></td>
         <td><%= form.municipality.name %></td>
-        <td><%= form.municipality.state %></td>
+        <td><%= form.municipality.state.state %></td>
         <td><%= form.department.department %></td>
         <% if user_signed_in? %>
         <td><%#= link_to "upvote", like_form_path(form), method: :put %>
