--- a/app/views/forms/welcome.html.erb
+++ b/app/views/forms/welcome.html.erb
@@ -1,4 +1,3 @@
-<!-- <p id="notice"><%= notice %></p> -->
 
 <h1>Welcome! What type of forms are your looking for?</h1>
 
@@ -6,21 +5,17 @@
   <li><%= link_to 'All Forms', forms_path %></li>
   <li><%= link_to 'By Municipality', municipalities_path %></li>
   <li><%= link_to 'By Department', departments_path %></li>
- 
-  <li><%#= link_to 'Recently added', recent_path %>
-  <li><%#= link_to 'By Department', department_path %></li>
-  <!-- <li>By State</li> -->
+  <li><%= link_to 'Resources', resources_path %></li>
+	<br>
 
-<br>
+	<%= render 'recent' %>
 
-<%= render 'recent' %>
-
-<% if user_signed_in? %>
-	<h3>I want to:</h3>
+	<% if user_signed_in? %>
+		<h3>I want to:</h3>
 
 	<li><%= link_to 'Add a New Form', new_form_path %></li>
 	<li><%= link_to 'Add a New Municipality', new_municipality_path %></li>
 	<li><%= link_to 'Add a New Department', new_department_path %></li>
-
-<% end %>
+	<li><%= link_to 'Manage States', states_path %></li>
+	<% end %>
 </ul>
