--- a/app/views/forms/_recent.html.erb
+++ b/app/views/forms/_recent.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= link_to form.form_name, form.form_link %></td>
         <td><%= form.municipality.name %></td>
-        <td><%= form.municipality.states.state %></td>
+        <td><%= form.municipality.state.state %></td>
 
         <td><%= form.department.department %></td>
         <% if user_signed_in? %>
