--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -3,25 +3,18 @@
 
 <p id="notice"><%= notice %></p>
 
-
-
-
-<!-- <div class="row">
+<div class="row">
   <div class="col-lg-6">
-    <div class="input-group"> -->
-    
       <%= form_for 'forms_path', method: :get, :class => "col-lg-6 form-inline" do %>
-       <!--  <div class="col-lg-6"> -->
-        
-        <%= text_field_tag :query, params[:query] %>
-        
-          <!-- <span class="input-group-btn"> -->
-        
-            <%= submit_tag "Search", :form_name => nil%>
-       
+        <%= text_field_tag :query, params[:query], class: "form-control" %>
+  </div>
+            <%= submit_tag "Search", :form_name => nil, class: "btn btn-default"%>
+            <%= link_to "Reset", forms_path, class: "btn btn-default" %>
           <!-- </span> -->
         
       <% end %>
+
+</div>
 
 <!--   </div> -->
 <!-- </div> -->
