--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -2,10 +2,12 @@
 
 <h1 class="panel-heading">Municipalities:</h1>
 
+
 <div>
        <%= form_tag('/municipalities', method: :get) do %>
-      <%= select_tag 'state_id', options_for_select(@states.map{ |s| [s.state, s.id] }) %>
-      <%= submit_tag "Search" %>
+      <%= select_tag 'state_id', options_for_select(@states.map{ |s| [s.state, s.id]}), class: "btn btn-default btn-lg dropdown-toggle"  %>
+      <%= submit_tag "Search", class: "btn btn-default" %>
+      <%= link_to "Reset", municipalities_path, class: "btn btn-default" %>
       <% end %>
 </div>
 <table class="table table-hover">
