--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -15,7 +15,7 @@
     <tr>
       <th>Municipality</th>
       <th>State</th>
-      <th>Population</th>
+      <th><%= sort_link 'Population', :population %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,10 +26,24 @@
    
     <div>
     <% @municipalities.each do |municipality| %>
-      <tr>
+      <tr class="active">
         <td><%= link_to municipality.name, municipality_path(municipality) %></td>
         <td><%= municipality.state.state %></td>
         <td><%= municipality.population %></td>
+          <% if @forms != nil %>
+            <% @forms.each do |form| %>
+            <div class="row">
+            <div>
+              <tr>
+                <td class:"col-md-3 col-md-offset-3"></td>
+                 <td class:"col-md-3 col-md-offset-3"><%= link_to form.form_name, form.form_link %></td>
+                 <td class:"col-md-3 col-md-offset-3"><%= form.department.department %></td>
+
+              </tr>
+            </div>
+          </div>
+            <% end %>
+          <% end %>
         <% if user_signed_in? %>
         <td><%= link_to 'Show', municipality %></td>
         <td><%= link_to 'Edit', edit_municipality_path(municipality) %></td>
