Formatting fixes on add form

--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -1,6 +1,5 @@
 <div class="panel panel-default">
 
-<p id="notice"><%= notice %></p>
 
 <div class="panel-heading">
   <p>
@@ -25,7 +24,7 @@
 
 <p>
   <strong>Municipality state:</strong>
-  <%= @form.municipality.state %>
+  <%= @form.municipality.state.state %>
 </p>
 
 <p>
