Added bootstrap to all buttons

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -27,5 +27,5 @@
 
 <br>
 <% if user_signed_in? %>
-<%= link_to 'New Department', new_department_path %>
+<%= link_to 'New Department', new_department_path, class: "btn btn-default" %>
 <% end %>
