--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -35,8 +35,8 @@
 </table>
 
 
-<%= link_to 'Edit', edit_department_path(@department) %> |
-<%= link_to 'Back', departments_path %>
+<%= link_to 'Edit', edit_department_path(@department), class: "btn btn-default" %> |
+<%= link_to 'Back', departments_path, class: "btn btn-default" %>
 
 
 </div>
