--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -49,6 +49,6 @@
 
 <br>
 <% if user_signed_in? %>
-<%= link_to 'New Form', new_form_path %>
-<%= link_to 'New Department', new_department_path %>
+<%= link_to 'New Form', new_form_path, class: "btn btn-default" %>
+<%= link_to 'New Department', new_department_path, class: "btn btn-default" %>
 <% end %>
