--- a/app/views/municipalities/show.html.erb
+++ b/app/views/municipalities/show.html.erb
@@ -10,6 +10,6 @@
 </div>
 <br>
 <div class="nav">
-<%= link_to 'Edit Municipality', edit_municipality_path(@municipality) %> |
-<%= link_to 'Back', municipalities_path %>
+<%= link_to 'Edit Municipality', edit_municipality_path(@municipality), class: "btn btn-default" %> |
+<%= link_to 'Back', municipalities_path, class: "btn btn-default" %>
 </div>
