--- a/app/views/departments/new.html.erb
+++ b/app/views/departments/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', departments_path %>
+<%= link_to 'Back', departments_path, class: "btn btn-default" %>
