--- a/app/views/forms/edit.html.erb
+++ b/app/views/forms/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @form %> |
-<%= link_to 'Back', forms_path %>
+<%= link_to 'Show', @form, class: "btn btn-default" %> |
+<%= link_to 'Back', forms_path, class: "btn btn-default" %>
