--- a/app/views/municipalities/edit.html.erb
+++ b/app/views/municipalities/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @municipality %> |
-<%= link_to 'Back', municipalities_path %>
+<%= link_to 'Show', @municipality, class: "btn btn-default" %> |
+<%= link_to 'Back', municipalities_path, class: "btn btn-default" %>
