--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -69,7 +69,7 @@
 <br>
 
 <% if user_signed_in? %>
-<%= link_to 'New Municipality', new_municipality_path %>
+<%= link_to 'New Municipality', new_municipality_path, class: "btn btn-default" %>
 <% end %>
 
 
