Added bootstrap to all buttons

--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -32,5 +32,5 @@
   <%= @form.department.department %>
 </p>
 </div>
-<%= link_to 'Edit', edit_form_path(@form) %> |
-<%= link_to 'Back', forms_path %>
+<%= link_to 'Edit', edit_form_path(@form), class: "btn btn-default" %> |
+<%= link_to 'Back', forms_path, class: "btn btn-default" %>
