added Add Form to municipalities view

--- a/app/views/municipalities/show.html.erb
+++ b/app/views/municipalities/show.html.erb
@@ -10,6 +10,7 @@
 </div>
 <br>
 <div class="nav">
+<%= link_to 'Back', municipalities_path, class: "btn btn-default" %> |
 <%= link_to 'Edit Municipality', edit_municipality_path(@municipality), class: "btn btn-default" %> |
-<%= link_to 'Back', municipalities_path, class: "btn btn-default" %>
+<%= link_to 'Add a New Form', new_form_path, class: "btn btn-default" %>
 </div>
