--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -27,7 +27,7 @@
     <%= f.collection_select :department_id, Department.order(:department), :id, :department %>
   </div>
   <div class="actions">
-    <%= f.submit "Add Form"%>
+    <%= f.submit "Save Form"%>
   </div>
 <% end %>
 
