--- a/app/views/municipalities/_form.html.erb
+++ b/app/views/municipalities/_form.html.erb
@@ -11,9 +11,6 @@
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 
     <div class="field">
     <%= f.label :name %><br>
@@ -30,7 +27,7 @@
     <%= f.number_field :population %>
   </div>
   <div class="actions">
-    <%= f.submit "Add Municipality"%>
+    <%= f.submit "Save Municipality"%>
   </div>
 <% end %>
 
