--- a/app/views/forms/welcome.html.erb
+++ b/app/views/forms/welcome.html.erb
@@ -13,7 +13,7 @@
 	<% if user_signed_in? %>
 		<h3>I want to:</h3>
 
-	<%= link_to 'Add a New Form', new_form_path, class: "btn btn-default" %>< | 
+	<%= link_to 'Add a New Form', new_form_path, class: "btn btn-default" %> | 
 	<%= link_to 'Add a New Municipality', new_municipality_path, class: "btn btn-default" %> | 
 	<%= link_to 'Add a New Department', new_department_path, class: "btn btn-default" %>
 	<li><%#= link_to 'Manage States', states_path %></li>
