--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href="/assets/bootstrap_and_overrides.css" rel="stylesheet">
-
+	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
    <!--  <link href="css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 <header>
+
 <ul class="nav nav-pills">
 	<li role="presentation"><%= link_to 'HOME', root_path %></li>
 <% if user_signed_in? %>
