Added bootstrap to notices

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,10 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <%= favicon_link_tag "/favicon.ico" %>
 	<link href="/assets/bootstrap_and_overrides.css" rel="stylesheet">
-	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
+	
    <!--  <link href="css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 <header>
@@ -32,9 +32,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<%= flash[:notice] if flash[:notice] %>
-	<%= flash[:alert] if flash[:alert] %>
-
+	<%= render 'layouts/messages' %>
+	
+	<%#= flash[:notice] if flash[:notice] %>
+	
+	<%#= flash[:alert] if flash[:alert] %>
+	
+	
 	<%= yield %>
 
 </body>
