--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -1,3 +1,4 @@
+<form class="form-horizontal align-left">
 <%= form_for(@form) do |f| %>
   <% if @form.errors.any? %>
     <div id="error_explanation">
@@ -10,25 +11,42 @@
       </ul>
     </div>
   <% end %>
+<br>
+<br>
+<br>
 
-  <div class="field">
-    <%= f.label :form_name %><br>
-    <%= f.text_field :form_name %>
+
+  <div class="form-group form-group-lg">
+    <div class="col-sm-6">
+      <%= f.text_field :form_name, class: "form-control input-lg", placeholder: "Form Name"  %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :form_link %><br>
-    <%= f.text_field :form_link %>
+
+
+  <div class="form-group form-group-lg">
+      <div class="col-sm-6">
+        <%= f.text_field :form_link, class: "form-control input-lg", placeholder: "https://city.seamlessdocs.com/f/linkname"  %>
+      </div>
   </div>
-  <div class="field">
-    <%= f.collection_select(:municipality_id, Municipality.all, :id, :name) %><br>
+
+
+  <div class="form-group input-lg">
+    <div class="controls">
+      <%= f.collection_select(:municipality_id, Municipality.all, :id, :name) %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :department_id %><br>
-    <%= f.collection_select :department_id, Department.order(:department), :id, :department %>
-  </div>
+    <div class="form-group input-lg">
+      <div class="controls">
+        <%= f.collection_select :department_id, Department.order(:department), :id, :department %>
+      </div>
+    </div>
+
   <div class="actions">
-    <%= f.submit "Save Form"%>
+    <%= f.submit "Save Form", class: "btn btn-primary"%>
   </div>
+
+</form>
 <% end %>
+<br>
 
 
