--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -1,14 +1,28 @@
 
 
-<div class:"col-md-3 col-md-offset-3">
-<h1 class="panel-heading">Municipalities</h1>
+<div class="page-header">
+
+  <div class="pull-left">
+  <!-- <div class:"col-md-3 col-md-offset-3"> -->
+    <h1 class="panel-heading">Municipalities</h1>
+  </div>
+
+
+
+  <div class="pull-right">
+  <!-- <div class:"col-md-3 float-left"> -->
+    <h3 class="text-right">Total Governments: <%= @count %><br>
+      <% if @present != nil %>
+        Total <%= @state_name.state %> Municipalities: <%= @count_state %></h3>
+      <% end %>
+    
+  </div>
+
+  <div class="clearfix"></div>
+
 </div>
-<div class:"col-md-3 float-left">
-  <h4>Total Governments: <%= @count %></h4>
- <% if @present != nil %>
-  <h4>Total <%= @state_name.state %> Municipalities: <%= @count_state %></h4>
- <% end %>
-</div>
+
+
 
 <div>
        <%= form_tag('/municipalities', method: :get) do %>
@@ -18,7 +32,8 @@
       <% end %>
 </div>
 
-<div class="panel panel-info">
+<!-- <div class="panel panel-info"> -->
+<div class="pannel">
   <table class="table table-hover">
   
 
