New form passes in muni_id from new muni page

--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -35,7 +35,8 @@
 
   <div class="form-group input-lg">
     <div class="controls">
-      <%= f.collection_select(:municipality_id, Municipality.all, :id, :name) %>
+      <%= f.collection_select(:municipality_id, Municipality.order(:name), :id, :name, {:selected =>
+params[:municipality_id]}) %>
     </div>
   </div>
     <div class="form-group input-lg">
