--- a/app/views/municipalities/show.html.erb
+++ b/app/views/municipalities/show.html.erb
@@ -11,5 +11,6 @@
 <div class="nav">
 <%= link_to 'Back', municipalities_path, class: "btn btn-default" %> |
 <%= link_to 'Edit Municipality', edit_municipality_path(@municipality), class: "btn btn-default" %> |
-<%= link_to 'Add a New Form', new_form_path, class: "btn btn-default" %>
+<%= link_to 'Add a New Form', new_form_path(:municipality_id => @municipality), class: "btn btn-default" %>
+<!-- link_to "Link text", some_path(:foo => "bar", :baz => "quux"), user: @user, :method => :post -->
 </div>
